--- a/index.html
+++ b/index.html
@@ -239,6 +239,11 @@
     <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt=""
             referrerpolicy="no-referrer-when-downgrade" /></noscript>
 
+    <script>
+        window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
+
 </body>
 
 </html>
